--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -3,7 +3,7 @@
     "links": {
       "home": "главная",
       "projects": "проекты",
-      "about": "о-себе",
+      "about-me": "о-себе",
       "contacts": "контакты"
     }
   },
@@ -15,13 +15,9 @@
     "introduction": {
       "heading": {
         "part_1": "-",
-        "part_2": "fullstack web",
-        "part_3": "разработчик"
+        "part_2": "fullstack web-разработчик"
       },
-      "description": {
-        "part_1": "Он создает адаптивные веб-сайты, где технологии",
-        "part_2": "сочетаются с творчеством"
-      },
+      "description": "Он создает адаптивные веб-сайты, где технологии сочетаются с творчеством",
       "button": "Свяжитесь со мной!!",
       "label": {
         "part_1": "В настоящее время",
@@ -79,6 +75,6 @@
   },
   "contacts": {
     "heading": "контакты",
-    "other": "другие-медиа"
+    "other": "другие"
   }
 }
