upd project link and quote on main page

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -25,8 +25,8 @@
       }
     },
     "quote": {
-      "text": "С большой силой, приходит большой счет за электроэнергию",
-      "author": "Доктор Кто"
+      "text": "Любой дурак может написать код, понятный компьютеру. Хорошие программисты пишут код, понятный людям",
+      "author": "Мартин Фаулер"
     },
     "projects": {
       "heading": {
