--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,8 +25,8 @@
       }
     },
     "quote": {
-      "text": "With great power comes great electricity bill",
-      "author": "Dr. Who"
+      "text": "Any fool can write code that a computer can understand. Good programmers write code that humans can understand",
+      "author": "Martin Fowler"
     },
     "projects": {
       "heading": {
