added og image + new projects and skills

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -45,7 +45,7 @@
       "languages": "Языки",
       "interests": "Интересы",
       "databases": "Базы данных",
-      "other": "Отсальное",
+      "other": "Остальное",
       "tools": "Инструменты",
       "frameworks": "Библиотеки",
       "hostings": "Хостинги"
